<resources>
    <string name="app_name" translatable="false">CO₂</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_selectpic">Select a picture</string>
    <string name="action_share">Share</string>
    <string name="effect_title_textview">No effect selected</string>
    <string name="action_resetFX_label">Reset this effect</string>
    <string name="action_resetFXAll_label">Reset all effects</string>
    <string name="no_fx_selected">No effect has been selected</string>

    <string name="label_tutorial_complete">Great! You have completed the tutorial, now you can start using CO₂ like a pro!</string>
    <string name="button_goToApp">Start using CO₂</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="pref_save_path">Saved pictures folder</string>
    <string name="pref_save_path_description">Choose where CO₂ should save your edited photos</string>
    <string name="pref_save_path_default" translatable="false">Pictures/CO2-Photo-Editor</string>

    <string name="pref_activate_onclick">Tap an effect to activate it</string>
    <string name="pref_activate_onclick_desc">Activate an effect automatically without having to use the switch</string>

    <string name="pref_choose_file_on_start">Choose new picture on startup</string>
    <string name="pref_choose_file_on_start_desc">Start the photo picker as soon as you launch the app</string>


    <string name="pref_theme_title">Choose theme</string>
    <string name="pref_theme_desc">Change the color theme of CO₂. Close and reopen the app to apply changes</string>

    <string-array name="themeValues" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="themeEntries" translatable="false">
        <item>Carbon red (default)</item>
        <item>Carbon blue</item>
        <item>Carbon green</item>
    </string-array>
    
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>


    <string name="toast_image_saved">Picture saved in</string>


    <string name="blackAndWhite">Black and white</string>
    <string name="sepia">Sepia</string>
    <string name="negative">Negative</string>
    <string name="adjustments">Adjustments</string>
    <string name="toneMapping1">Tone Mapping</string>
    <string name="crt">CRT Effect</string>
    <string name="noise1">Noise</string>
    <string name="filmGrain">Film Grain</string>
    <string name="sharpness">Sharpness</string>
    <string name="radius">Radius</string>
    <string name="intensity">Intensity</string>


    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="exposure">Exposure</string>
    <string name="vignetting">Vignetting</string>
    <string name="lineWidth">Line Width</string>
    <string name="amount">Amount</string>
    <string name="size">Size</string>
    <string name="luminance">Luminance</string>
    <string name="color">Color</string>
    <string name="randomizerSeed">Randomizer Seed</string>
    <string name="strength">Strength</string>
    <string name="darkNoisePower">Dark Noise Power</string>
    <string name="randomNoiseStrength">Random Noise Strength</string>
    <string name="bloom">Bloom</string>
    <string name="bloomThreshold">Threshold</string>
    <string name="bloomSaturation">Bloom Saturation</string>
    <string name="bloomBlur">Bloom Blur</string>
    <string name="bloomIntensity">Bloom Intensity</string>
    <string name="bloomBaseIntensity">Base Intensity</string>
    <string name="whiteLevel">White Level</string>
    <string name="luminanceSaturation">Luminance Saturation</string>
    <string name="tonality">Tonality</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="tutorial1">1: Select a new picture\n2: Save the current picture\n3: Tap the hamburger button or swipe from the left side of the screen to reveal the effects menu</string>
    <string name="tutorial2">Use the menu button to access more actions</string>
    <string name="tutorial3">In the effects menu, choose a filter from the right column (1) or a preset from the left one (2)\nPresets are combinations of filters, you can even make your own!\nHold a preset to delete it\nThe filters with a lighter gray background (3) are the active ones\nHold an active filter to disable it</string>
    <string name="tutorial4">1: Use the toggle to switch off an active filter\n2: Adjust the filter by using the sliders. Scroll the sliders list to reveal more\n3: Click on the picture you are editing to hide/show the sliders view</string>





    <string name="effect_disabled_message">Filter disabled</string>
    <string name="title_activity_about">About</string>

    <string name="textView_listTitleFX">Filters</string>
    <string name="textView_listTitlePresets">Presets</string>


    <string name="label_about_appAuthor">App author</string>
    <string name="label_about_glAuthor">OpenGL filters library</string>
    <string name="label_about_wantToHelp">Want to help?</string>
    <string name="label_about_license">License</string>

    <string name="label_about_appAuthor_c">Gabriele Musco aka GabMus</string>
    <string name="label_about_glAuthor_c">Mattia Panettiere aka xerdent</string>
    <string name="label_about_wantToHelp_c">Check out the Tech Pills YouTube channel. By watching my videos and subscribing to my channel you can be of great help!</string>
    <string name="label_about_license_c">Apache License Version 2.0, January 2004</string>

    <string name="loading_message">Saving your picture…</string>

    <string name="deletePresetAlert_message">Delete this preset?</string>
    <string name="choosePresetName">Choose a name for the preset…</string>
    <string name="presetTitleIsEmpty">Preset title can\'t be empty</string>
    <string name="presetTitleIsInvalid">Preset title contains invalid characters</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>
    <string name="action_savePreset_label">Save as preset</string>
    <string name="cantDeleteDefaultPresets">Can\'t delete default presets</string>

</resources>
