<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="pref_save_path_key"
        android:title="@string/pref_save_path"
        android:summary="@string/pref_save_path_description"
        android:inputType="text"
        android:defaultValue="@string/pref_save_path_default"
        android:singleLine="true" />

    <CheckBoxPreference
        android:key="pref_activate_onclick_key"
        android:title="@string/pref_activate_onclick"
        android:summary="@string/pref_activate_onclick_desc"
        android:defaultValue="true" />


    <CheckBoxPreference
        android:key="pref_choose_file_on_start_key"
        android:title="@string/pref_choose_file_on_start"
        android:summary="@string/pref_choose_file_on_start_desc"
        android:defaultValue="false" />

    <!-- <ListPreference
        android:key="pref_theme_key"
        android:title="@string/pref_theme_title"
        android:summary="@string/pref_theme_desc"
        android:entries="@array/themeEntries"
        android:entryValues="@array/themeValues"
        android:defaultValue="1"/> -->

</PreferenceScreen>